--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,6 +21,9 @@
   <meta name="msapplication-TileImage" content="/ico/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
 <!-- mein geiles Logo -->
+<!-- Google adsense -->
+  <script data-ad-client="ca-pub-2423874063542870" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Google adsense -->
   <title>{% if page.use-site-title %}{{ site.title }} {{ site.title-separator }} {{ site.description }}{% elsif page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 
   <meta name="author" content="{{ site.author.name }}" />
