--- a/_includes/staticman-comments.html
+++ b/_includes/staticman-comments.html
@@ -3,7 +3,7 @@
     <!-- Start static comments -->
     <div class="js-comments">
       {% if site.data.comments[page.slug] %}
-        <h3 class="page__comments-title">{{ site.data.ui-text[site.locale].comments_title | default: "Comments" }}</h3>
+        <h3 class="page__comments-title">{{ site.data.ui-text[site.locale].comments_title | default: "Kommentare" }}</h3>
         {% assign comments = site.data.comments[page.slug] | sort %}
         {% for comment in comments %}
           {% assign email = comment[1].email %}
@@ -18,20 +18,20 @@
     <!-- End static comments -->
     <!-- Start new comment form -->
     <div class="page__comments-form">
-      <h3 class="page__comments-title">{{ site.data.ui-text[site.locale].comments_label | default: "Leave a Comment" }}</h3>
-      <p class="small">{{ site.data.ui-text[site.locale].comment_form_info | default: "Your email address will not be published. Required fields are marked" }} <span class="required">*</span></p>
+      <h3 class="page__comments-title">{{ site.data.ui-text[site.locale].comments_label | default: "Hinterlasse " }}</h3>
+      <p class="small">{{ site.data.ui-text[site.locale].comment_form_info | default: "Deine EMail-Adresse wird nicht veröffentlicht. Benötigte Felder sind mit Stern gekennzeichnet." }} <span class="required">*</span></p>
       <form id="new_comment" class="page__comments-form js-form form" method="post">
         <div class="form-group">
           <label for="comment-form-message">{{ site.data.ui-text[site.locale].comment_form_comment_label | default: "Comment" }} <small class="required">*</small></label><br>
           <textarea type="text" rows="12" cols="36" id="comment-form-message" name="fields[message]" tabindex="1"></textarea>
-          <div class="small help-block"><a href="https://daringfireball.net/projects/markdown/">{{ site.data.ui-text[site.locale].comment_form_md_info | default: "Markdown is supported." }}</a></div>
+          <div class="small help-block"><a href="https://daringfireball.net/projects/markdown/">{{ site.data.ui-text[site.locale].comment_form_md_info | default: "Sie können mit Markdown formatieren." }}</a></div>
         </div>
         <div class="form-group">
           <label for="comment-form-name">{{ site.data.ui-text[site.locale].comment_form_name_label | default: "Name" }} <small class="required">*</small></label>
           <input type="text" id="comment-form-name" name="fields[name]" tabindex="2" />
         </div>
         <div class="form-group">
-          <label for="comment-form-email">{{ site.data.ui-text[site.locale].comment_form_email_label | default: "Email address" }} <small class="required">*</small></label>
+          <label for="comment-form-email">{{ site.data.ui-text[site.locale].comment_form_email_label | default: "Email Addresse" }} <small class="required">*</small></label>
           <input type="email" id="comment-form-email" name="fields[email]" tabindex="3" />
         </div>
         <div class="form-group">
@@ -48,8 +48,8 @@
         </div>
         <!-- Start comment form alert messaging -->
         <p class="hidden js-notice">
-          <strong class="js-notice-text-success hidden">{{ site.data.ui-text[site.locale].comment_success_msg | default: "Thanks for your comment! It will show on the site once it has been approved." }}</strong>
-          <strong class="js-notice-text-failure hidden">{{ site.data.ui-text[site.locale].comment_error_msg | default: "Sorry, there was an error with your submission. Please make sure all required fields have been completed and try again." }}</strong>
+          <strong class="js-notice-text-success hidden">{{ site.data.ui-text[site.locale].comment_success_msg | default: "Vielen Dank für Ihren Kommentar. Er muss zunächst frei geschaltet werden." }}</strong>
+          <strong class="js-notice-text-failure hidden">{{ site.data.ui-text[site.locale].comment_error_msg | default: "Sorry, aber es gab einen Fehler in Ihrer Eingabe. Bitte füllen Sie alle benögten Felder aus und versuchen Sie es erneut." }}</strong>
         </p>
         <!-- End comment form alert messaging -->
         {% if site.staticman.reCaptcha.siteKey %}
@@ -58,8 +58,8 @@
           </div>
         {% endif %}
         <div class="form-group">
-          <button type="submit" id="comment-form-submit" tabindex="5" class="btn btn--primary btn--large">{{ site.data.ui-text[site.locale].comment_btn_submit | default: "Submit Comment" }}</button>
-          <button type="submit" id="comment-form-submitted" tabindex="5" class="btn btn--primary btn--large hidden" disabled>{{ site.data.ui-text[site.locale].comment_btn_submitted | default: "Submitted" }}</button>
+          <button type="submit" id="comment-form-submit" tabindex="5" class="btn btn--primary btn--large">{{ site.data.ui-text[site.locale].comment_btn_submit | default: "Kommentar senden" }}</button>
+          <button type="submit" id="comment-form-submitted" tabindex="5" class="btn btn--primary btn--large hidden" disabled>{{ site.data.ui-text[site.locale].comment_btn_submitted | default: "Gesendet" }}</button>
         </div>
       </form>
     </div>
