--- a/_includes/staticman-comments.html
+++ b/_includes/staticman-comments.html
@@ -49,7 +49,7 @@
         <!-- Start comment form alert messaging -->
         <p class="hidden js-notice">
           <strong class="js-notice-text-success hidden">{{ site.data.ui-text[site.locale].comment_success_msg | default: "Vielen Dank für Ihren Kommentar. Er muss zunächst frei geschaltet werden." }}</strong>
-          <strong class="js-notice-text-failure hidden">{{ site.data.ui-text[site.locale].comment_error_msg | default: "Sorry, aber es gab einen Fehler in Ihrer Eingabe. Bitte füllen Sie alle benögten Felder aus und versuchen Sie es erneut." }}</strong>
+          <strong class="js-notice-text-failure hidden">{{ site.data.ui-text[site.locale].comment_error_msg | default: "Sorry, aber es gab einen Fehler in Ihrer Eingabe. Bitte füllen Sie alle benötigten Felder aus und versuchen Sie es erneut." }}</strong>
         </p>
         <!-- End comment form alert messaging -->
         {% if site.staticman.reCaptcha.siteKey %}
